# OpenXaml

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  Doxyfile.in  LICENSE  README.md  vcpkg.json  vcpkg.txt
Dependencies/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/include/: cxxopts.hpp
OpenXaml/: Application.cpp  CMakeLists.txt  Environment.cpp  GLFWHelloWorld.cpp  dev.cpp
OpenXaml/Animation/: Animation.cpp
OpenXaml/Environment/: Environment.cpp  Window.cpp
OpenXaml/GL/: Font.cpp  GLConfig.cpp  GLConfig.cpp.in
OpenXaml/Parser/: CMakeLists.txt  ErrorReader.cpp  Parser.cpp
OpenXaml/Shaders/: CMakeLists.txt  fragment.glsl  vertex.glsl
OpenXaml/Shaders/Fragment/: base.hpp
OpenXaml/XamlEvents/: ClickEvent.cpp  EventHandler.cpp  KeyDownEvent.cpp  TextEvent.cpp  XamlEvent.cpp
OpenXaml/XamlObjects/: Button.cpp  ColumnDefinition.cpp  ColumnDefinitionCollection.cpp  Frame.cpp  Grid.cpp  Rectangle.cpp  RowDefinition.cpp  RowDefinitionCollection.cpp  TextBlock.cpp  TextBox.cpp  Window.cpp  XamlObject.cpp
OpenXaml/include/: Application.h  Environment.h  Globals.h
OpenXaml/include/Events/: EventBase.h
OpenXaml/include/GL/: Character.h  Font.h  FontProperties.h  GLConfig.h
OpenXaml/include/OpenXaml/: Application.h  Environment.h
OpenXaml/include/OpenXaml/Animation/: Animation.h  AnimationEvent.h
OpenXaml/include/OpenXaml/Environment/: Environment.h  Window.h
OpenXaml/include/OpenXaml/GL/: Character.h  Font.h  FontProperties.h  GLConfig.h
OpenXaml/include/OpenXaml/Properties/: Alignment.h  TextWrapping.h  Thickness.h  Visibility.h
OpenXaml/include/OpenXaml/XamlEvents/: ClickEvent.h  KeyDownEvent.h  TextEvent.h  XamlEvent.h  XamlEvents.h
OpenXaml/include/OpenXaml/XamlObjects/: Button.h  ColumnDefinition.h  ColumnDefinitionCollection.h  Coordinate.h  Frame.h  Grid.h  Rectangle.h  RowDefinition.h  RowDefinitionCollection.h  TextBlock.h  TextBox.h  XamlObject.h  XamlObjects.h  vec2.h
OpenXaml/include/Parser/: ErrorReader.h  Parser.h
OpenXaml/include/Properties/: Alignment.h  HorizontalAlignment.h  TextWrapping.h  VerticalAlignment.h
OpenXaml/include/XamlEvents/: ClickEvent.h  EventHandler.h  XamlEvent.h  XamlEvents.h
OpenXaml/include/XamlObjects/: Button.h  ColumnDefinition.h  ColumnDefinitionCollection.h  ColumnDefinitions.h  Coordinate.h  Frame.h  Grid.h  Rectangle.h  RowDefinition.h  RowDefinitionCollection.h  RowDefinitions.h  TextBlock.h  TextBox.h  XamlObject.h  XamlObjects.h  XamlProperty.h
Sample/: App.xaml.cpp  CMakeLists.txt  MainPage.xaml  MainPage.xaml.cpp  Test.xaml
Sample/include/: MainPage.xaml.h
Schema/: CMakeLists.txt  XamlStandard.xsd
cmake/: OpenXaml.cmake
xut/: CMakeLists.txt  README.md  xut.cpp
xut/Formatter/: CppFormatter.cpp
xut/Schema/: XamlStandard.cpp.in  XamlStandard.xsd
xut/include/Formatter/: CppFormatter.h
xut/include/Schema/: XamlStandard.h
xut/include/internal/: ButtonElement.h  ColumnDefinitionCollectionElement.h  ColumnDefinitionElement.h  ElementTypes.h  FrameElement.h  GridElement.h  RectangleElement.h  RowDefinitionCollectionElement.h  RowDefinitionElement.h  TextBlockElement.h  TextBoxElement.h  XamlClass.h  XamlElement.h  XamlElements.h
xut/include/xml/: DomLoader.h  ErrorReader.h  UID.h
xut/internal/: ButtonElement.cpp  ColumnDefinitionCollectionElement.cpp  ColumnDefinitionElement.cpp  FrameElement.cpp  GridElement.cpp  RectangleElement.cpp  RowDefinitionCollectionElement.cpp  RowDefinitionElement.cpp  TextBlockElement.cpp  TextBoxElement.cpp  XamlClass.cpp  XamlElement.cpp
xut/xml/: DomLoader.cpp  ErrorReader.cpp  UID.cpp
